--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -7,6 +7,11 @@
   <body>
     <h1>{{title}}</h1>
     <p>{{description}}</p>
+    <h2>연락정보</h2>
+    <ul>
+      <li>전화번호: {{phone}}</li>
+      <li>Email: <a href="mailto:{{email}}">{{email}}</a></li>
+    </ul>
     <p>© {{year}}</p>
   </body>
 </html>
